2017-08-29  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* server/Makefile.am: Rename final target to riscv32-gdbserver.
	* server/Makefile.in: Regenerated.
	* server/main.cpp: Use riscv32-gdbserver in usage message.

2017-08-28  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.md: Bring build instructions up to date for latest code
	developments.

2017-08-28  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.md: Do not suggested SSH connection for model by default.

2017-08-15  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::GdbServerImpl):
	Initialise rsp member using initialisation list, not within
	method body.
	(GdbServerImpl::~GdbServerImpl): Don't delete rsp member.

2017-08-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Break out trace as a library in its own right to be shared by
	targets and GdbServer. Make targets aware of their associated
	server and provide an interface for them to access server
	functionality. Use this to move disassembly to be generic.

	* Makefile.am: Break out trace into its own library.
	* Makefile.in: Regenerated.
	* configure: Regenerated.
	* configure.ac: Create Makefile for trace.
	* server/AbstractConnection.h: Use standards compliant header
	guard.
	* server/Disassembler.cpp: Moved from targets/ri5cy.
	(Disassembler::Disassembler): Use sprintf as the output function
	and replace C-style casts.
	(Disassembler::~Disassembler): Moved here from header.
	(Disassembler::disassemble): Remove C style casts
	* server/Disassembler.h: Moved from targets/ri5cy, use standards
	compliant header guard.
	(class Disassembler): Move to consistent camel case variable
	naming and allow disassemble to return via a stream.
	* server/GdbServer.cpp: Created after moving old version to
	GdbServerImpl.cpp.
	* server/GdbServer.h Created after moving old version to
	GdbServerImpl.h.
	* server/GdbServerImpl.cpp: Moved from GdbServer.cpp, class